Fix alignments and Add flex-wrap
Fixed the container items alignments and added flex-wrap option.

--- a/style.css
+++ b/style.css
@@ -98,6 +98,8 @@ button{
 
 .container{
     display: flex;
+    align-items:first baseline;
+    flex-wrap: wrap;
     gap: 100px;
 }
 
